k8s/backend/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
spec:
    replicas: 1 #FIXME: replica 수 조정
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
                - name: backend
                  image: 837126493345.dkr.ecr.ap-northeast-2.amazonaws.com/goormthon-4/backend:build-56
                  ports:
                      - containerPort: 8080
                  volumeMounts:
                      - name: config-volume
                        mountPath: /app/config
                        readOnly: true
                      - name: frontend-env
                        mountPath: /app/.env
                        subPath: .env
            volumes:
                - name: config-volume
                  configMap:
                      name: backend-config
                - name: frontend-env
                  secret:
                    secretName: frontend-env
---
apiVersion: v1
kind: Service
metadata:
    name: backend-service
spec:
    selector:
        app: backend
    ports:
        - port: 80
          targetPort: 8080
