k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: backend-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - host: goormthon-4.goorm.training #FIXME:
          http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 80
